--- a/front-end/package.json
+++ b/front-end/package.json
@@ -8,11 +8,13 @@
     "@testing-library/user-event": "^7.1.2",
 
     "axios": "^0.19.1",
+    "bootstrap": "^4.4.1",
     "formik": "^2.1.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "reactstrap": "^8.2.0",
     "styled-components": "^4.4.1",
 
     "yup": "^0.28.0"
